# recommender_algorithms

./: .gitignore  Dockerfile  Dockerfile_cpu  Dockerfile_gpu  README.md  docker-compose.yaml  pyproject.toml
cpu/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup.sh
cpu/src/: average_baseline.py  collaborative_filtering.py  ease.py  factorization_machine.py  fm.py  iALS.py  matrix_factorization.py  random_baseline.py  two_tower.py
cpu/src/model/: two_tower_model.py
eval/: eval_func.py
gpu/: docker-compose.yaml  setup.sh
src/: collaborative_filtering.py  data_downloader.py  dataloader.py  lgbm_regressor.py  matrix_factorization.py  preprpcessor.py
util/: dataloader.py  preprpcessor.py
