[tool.poetry]
name = "recommender_algorithm"
version = "0.1.0"
description = ""
authors = ["nogawanogawa <t_tsuno_tsuno@yahoo.co.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
numpy = "^1.22.3"
urllib3 = "^1.26.9"
torch = "^1.11.0"
setuptools = "^62.1.0"
Cython = "^0.29.28"
rankfm = "^0.2.5"
scikit-learn = "^1.0.2"
tqdm = "^4.64.0"
dtreeviz = "^1.3.6"
graphviz = "^0.20"
lightgbm = "^3.3.2"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
