[tool.poetry]
name = "recommender_algorithm"
version = "0.1.0"
description = ""
authors = ["nogawanogawa"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
numpy = "^1.22.4"
urllib3 = "^1.26.9"
scikit-learn = "^1.1.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
